--- a/MySpring_ssh/WebContent/css/mypage.css
+++ b/MySpring_ssh/WebContent/css/mypage.css
@@ -7,33 +7,52 @@
 }
 
 body{padding-left:0px;padding-right:0px;}
-.homecontainer {
-    width: 100%;
-    height: 40px;
-    position:fixed;z-index:999999; 
-    background: #265B90;
-    border-bottom: 0;
-    
-    padding: 0;
-    box-shadow: 0 0 5px #06c;
-}
 
 .row {
   margin-right: 0px;
   margin-left: 0px;
   
 }
+.span12{width:940px;}
+.span11{width:860px;}
+.span10{width:780px; position:absolute; margin-left:170px;margin-top:20px}
+.span9{width:700px;}
+.span8{width:620px;}
+.span7{width:540px;}
+.span6{width:460px;}
+.span5{width:380px;}
+.span4{width:300px;}
+.span3{width:220px;}
+.span2{width:140px;}
+.span1{width:60px;}
 
 .logo {
     display: block;
-    height: 30px;
-    width: 150px;
+    height: 50px;
+    width: auto;
     float: left;
     margin-left: 10px;
     background-position: 0 0;
     display: inline;
     outline: 0;
 }
+
+.biaoti {
+  color: #ddd;
+  text-decoration: none;
+}
+
 .carousel-caption{position:absolute;left:0;right:0;bottom:0;padding:15px;background:#333333;background:rgba(0, 0, 0, 0.75);}
 .carousel-caption h4,.carousel-caption p{color:#ffffff;line-height:20px;}
+
+
+
+.alert{padding:8px 35px 8px 14px;margin-bottom:20px;text-shadow:0 1px 0 rgba(255, 255, 255, 0.5);background-color:#fcf8e3;border:1px solid #fbeed5;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;}
+.alert,.alert h4{color:#c09853;}
+
+.span2, .span10{
+	float:left;
+}
+
+
 
